Feat: Configure for Vercel UI deployment

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "install-all": "npm install && npm install --prefix api && npm install --prefix client",
     "dev": "docker-compose up --build",
     "down": "docker-compose down",
-    "vercel-build": "cd api && npm install && cd ../client && npm install && npm run build"
+    "vercel-build": "npm install --prefix api && npm install --prefix client && npm run build --prefix client"
   },
   "author": "",
   "license": "ISC",
