--- a/vercel.json
+++ b/vercel.json
@@ -19,15 +19,15 @@
       "dest": "/api/index.js"
     },
     {
-      "src": "/api/models(.*)",
+      "src": "/api/models/(.*)",
       "dest": "/api/models/Favorite.js"
     },
     {
-      "src": "/api/models(.*)",
+      "src": "/api/models/(.*)",
       "dest": "/api/models/Search.js"
     },
     {
-      "src": "/api/models(.*)",
+      "src": "/api/models/(.*)",
       "dest": "/api/models/User.js"
     },
     {
