--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,16 @@
   "version": 2,
   "builds": [
     {
-      "src": "api/index.js",
+      "src": [
+        "api/index.js",
+        "api/models/Favorite.js",
+        "api/models/Search.js",
+        "api/models/User.js",
+        "api/middleware/auth.js",
+        "api/routes/favorites.js",
+        "api/routes/auth.js",
+        "api/routes/weather.js"
+      ],
       "use": "@vercel/node"
     },
     {
@@ -16,19 +25,16 @@
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "/api/index.js"
-    },
-    {
-      "src": "/api/models/(.*)",
-      "dest": "/api/models/Favorite.js"
-    },
-    {
-      "src": "/api/models/(.*)",
-      "dest": "/api/models/Search.js"
-    },
-    {
-      "src": "/api/models/(.*)",
-      "dest": "/api/models/User.js"
+      "dest": [
+        "/api/index.js",
+        "/api/models/Favorite.js",
+        "/api/models/Search.js",
+        "/api/models/User.js",
+        "/api/middleware/auth.js",
+        "/api/routes/favorites.js",
+        "/api/routes/auth.js",
+        "/api/routes/weather.js"
+      ]
     },
     {
       "src": "/(.*)",
