--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "builds": [
     {
-      "src": "api/**/*.js",
+      "src": "package.json",
       "use": "@vercel/node"
     },
     {
@@ -15,16 +15,8 @@
   ],
   "routes": [
     {
-      "src": "/api/weather",
-      "dest": "/api/weather.js"
-    },
-    {
-      "src": "/api/auth/(.*)",
-      "dest": "/api/auth.js"
-    },
-    {
-      "src": "/api/favorites/(.*)",
-      "dest": "/api/favorites.js"
+      "src": "/api/(.*)",
+      "dest": "/api/index.js"
     },
     {
       "handle": "filesystem"
